--- a/CarND-Term2-ide-profile-VisualStudio/VisualStudio/CarND-Extended-Kalman-Filter-Project.vcxproj
+++ b/CarND-Term2-ide-profile-VisualStudio/VisualStudio/CarND-Extended-Kalman-Filter-Project.vcxproj
@@ -21,10 +21,12 @@
   <ItemGroup>
     <ClInclude Include="..\..\src\json.hpp" />
     <ClInclude Include="..\..\src\PID.h" />
+    <ClInclude Include="Twiddle.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\main.cpp" />
     <ClCompile Include="..\..\src\PID.cpp" />
+    <ClCompile Include="Twiddle.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
